Upload new feacture

--- a/src/components/Input/styles.module.scss
+++ b/src/components/Input/styles.module.scss
@@ -1,8 +1,10 @@
 .inputContainer {
     span {
         margin-bottom: 1rem;
-        background: #a4133c;
         padding: 0.2rem;
+        font-size: 0.8rem;
+        font-weight: bold;
+        color: crimson;
     }
 
     input {
